fix: vh on ios

--- a/web/src/global/main.scss
+++ b/web/src/global/main.scss
@@ -5,7 +5,6 @@ html {
 
 body {
   margin: 0;
-  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -15,7 +14,6 @@ body {
 #root {
   display: flex;
   flex: 1;
-  min-height: 100vh;
   width: 100vw;
   flex-direction: column;
 }
